feat(back): added support of new watchlists
